iptables/rtbm/ip6tables-save_filter.txt
# Generated by ip6tables-save v1.6.2 on Tue Nov 21 01:15:33 2023
*raw
:PREROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [8:608]
:bw_raw_PREROUTING - [0:0]
:idletimer_raw_PREROUTING - [0:0]
-A PREROUTING -j bw_raw_PREROUTING
-A PREROUTING -j idletimer_raw_PREROUTING
COMMIT
# Completed on Tue Nov 21 01:15:33 2023
# Generated by ip6tables-save v1.6.2 on Tue Nov 21 01:15:33 2023
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [4:304]
:POSTROUTING ACCEPT [4:304]
:bw_mangle_POSTROUTING - [0:0]
:idletimer_mangle_POSTROUTING - [0:0]
-A INPUT -i ccmni0 -j MARK --set-xmark 0x31f40/0xffffffff
-A POSTROUTING -j bw_mangle_POSTROUTING
-A POSTROUTING -j idletimer_mangle_POSTROUTING
COMMIT
# Completed on Tue Nov 21 01:15:33 2023
# Generated by ip6tables-save v1.6.2 on Tue Nov 21 01:15:33 2023
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [8:608]
:bw_FORWARD - [0:0]
:bw_INPUT - [0:0]
:bw_OUTPUT - [0:0]
:bw_costly_shared - [0:0]
:bw_happy_box - [0:0]
:bw_penalty_box - [0:0]
:fw_FORWARD - [0:0]
:fw_INPUT - [0:0]
:fw_OUTPUT - [0:0]
:fw_dozable - [0:0]
:fw_standby - [0:0]
:oem_fwd - [0:0]
:oem_out - [0:0]
:st_OUTPUT - [0:0]
-A INPUT -j bw_INPUT
-A INPUT -j fw_INPUT
-A FORWARD -j oem_fwd
-A FORWARD -j fw_FORWARD
-A FORWARD -j bw_FORWARD
-A OUTPUT -j oem_out
-A OUTPUT -j fw_OUTPUT
-A OUTPUT -j st_OUTPUT
-A OUTPUT -j bw_OUTPUT
-A fw_dozable -p ipv6-icmp -m icmp6 --icmpv6-type 2 -j RETURN
-A fw_dozable -p ipv6-icmp -m icmp6 --icmpv6-type 133 -j RETURN
-A fw_dozable -p ipv6-icmp -m icmp6 --icmpv6-type 134 -j RETURN
-A fw_dozable -p ipv6-icmp -m icmp6 --icmpv6-type 135 -j RETURN
-A fw_dozable -p ipv6-icmp -m icmp6 --icmpv6-type 136 -j RETURN
-A fw_dozable -p ipv6-icmp -m icmp6 --icmpv6-type 137 -j RETURN
-A fw_dozable -j DROP
COMMIT
# Completed on Tue Nov 21 01:15:33 2023
