iptables/rtbm/iptables_save_filter.txt
# Generated by iptables-save v1.6.2 on Tue Nov 21 00:50:41 2023
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
:ADDITION_ZONE - [0:0]
:CELL_PUB_FWD_PORT_ZONE - [0:0]
:CELL_PUB_IO_PORT_ZONE - [0:0]
:CELL_TEL_FWD_PORT_ZONE - [0:0]
:CELL_TEL_IO_PORT_ZONE - [0:0]
:FWD_CELL_PUB_IFACE_ZONE - [0:0]
:FWD_CELL_TEL_IFACE_ZONE - [0:0]
:FWD_ETH0_IFACE_ZONE - [0:0]
:FWD_SWM_ZONE - [0:0]
:FWD_VLAN_A_IFACE_ZONE - [0:0]
:FWD_VLAN_B_IFACE_ZONE - [0:0]
:FWD_VLAN_C_IFACE_ZONE - [0:0]
:FWD_WIFI_AP_IFACE_ZONE - [0:0]
:FWD_WIFI_STA_IFACE_ZONE - [0:0]
:INPUT_CELL_PUB_IP_ZONE - [0:0]
:INPUT_CELL_TEL_IP_ZONE - [0:0]
:INPUT_ETH0_IP_ZONE - [0:0]
:INPUT_VLAN_A_IP_ZONE - [0:0]
:INPUT_VLAN_B_IP_ZONE - [0:0]
:INPUT_VLAN_C_IP_ZONE - [0:0]
:INPUT_WIFI_AP_IP_ZONE - [0:0]
:INPUT_WIFI_STA_IP_ZONE - [0:0]
:OUTPUT_CELL_PUB_IP_ZONE - [0:0]
:OUTPUT_CELL_TEL_IP_ZONE - [0:0]
:OUTPUT_ETH0_IP_ZONE - [0:0]
:OUTPUT_SWM_ZONE - [0:0]
:OUTPUT_VLAN_A_IP_ZONE - [0:0]
:OUTPUT_VLAN_B_IP_ZONE - [0:0]
:OUTPUT_VLAN_C_IP_ZONE - [0:0]
:OUTPUT_WIFI_AP_IP_ZONE - [0:0]
:OUTPUT_WIFI_STA_IP_ZONE - [0:0]
:RTBM_FLT_FWD - [0:0]
:RTBM_FLT_INPUT - [0:0]
:RTBM_FLT_OUTPUT - [0:0]
:SWM_LOG_ZONE - [0:0]
:UNAUTHORIZED_ZONE - [0:0]
:VLAN_A_IN_PORT_ZONE - [0:0]
:VLAN_A_OUT_PORT_ZONE - [0:0]
:VLAN_B_FWD_PORT_ZONE - [0:0]
:VLAN_B_IO_PORT_ZONE - [0:0]
:VLAN_C_FWD_PORT_ZONE - [0:0]
:VLAN_C_IO_PORT_ZONE - [0:0]
:WIFI_AP_FWD_PORT_ZONE - [0:0]
:WIFI_AP_IO_PORT_ZONE - [0:0]
:WIFI_STA_FWD_PORT_ZONE - [0:0]
:WIFI_STA_IO_PORT_ZONE - [0:0]
:bw_FORWARD - [0:0]
:bw_INPUT - [0:0]
:bw_OUTPUT - [0:0]
:bw_costly_shared - [0:0]
:bw_happy_box - [0:0]
:bw_penalty_box - [0:0]
:fw_FORWARD - [0:0]
:fw_INPUT - [0:0]
:fw_OUTPUT - [0:0]
:fw_dozable - [0:0]
:fw_standby - [0:0]
:oem_fwd - [0:0]
:oem_out - [0:0]
:st_OUTPUT - [0:0]
-A INPUT -j RTBM_FLT_INPUT
-A INPUT -i lo -j ACCEPT
-A INPUT -j bw_INPUT
-A INPUT -j fw_INPUT
-A INPUT -i lxcbr0 -j ACCEPT
-A FORWARD -o lxcbr0 -j ACCEPT
-A FORWARD -i lxcbr0 -j ACCEPT
-A FORWARD -j FWD_SWM_ZONE
-A FORWARD -j RTBM_FLT_FWD
-A FORWARD -j oem_fwd
-A FORWARD -j fw_FORWARD
-A FORWARD -j bw_FORWARD
-A OUTPUT -j OUTPUT_SWM_ZONE
-A OUTPUT -j RTBM_FLT_OUTPUT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -j oem_out
-A OUTPUT -j fw_OUTPUT
-A OUTPUT -j st_OUTPUT
-A OUTPUT -j bw_OUTPUT
-A OUTPUT -o lxcbr0 -j ACCEPT
-A ADDITION_ZONE -j RETURN
-A CELL_PUB_FWD_PORT_ZONE -p icmp -j ACCEPT
-A CELL_PUB_FWD_PORT_ZONE -p tcp -j ACCEPT
-A CELL_PUB_FWD_PORT_ZONE -p udp -j ACCEPT
-A CELL_PUB_FWD_PORT_ZONE -j ADDITION_ZONE
-A CELL_PUB_FWD_PORT_ZONE -j UNAUTHORIZED_ZONE
-A CELL_PUB_IO_PORT_ZONE -p tcp -m multiport --dports 53 -j ACCEPT
-A CELL_PUB_IO_PORT_ZONE -p udp -m multiport --dports 53 -j ACCEPT
-A CELL_PUB_IO_PORT_ZONE -p icmp -m icmp --icmp-type 3 -j ACCEPT
-A CELL_PUB_IO_PORT_ZONE -p icmp -m icmp --icmp-type 11 -j ACCEPT
-A CELL_PUB_IO_PORT_ZONE -j ADDITION_ZONE
-A CELL_PUB_IO_PORT_ZONE -m state --state RELATED,ESTABLISHED -j ACCEPT
-A CELL_PUB_IO_PORT_ZONE -j UNAUTHORIZED_ZONE
-A CELL_TEL_FWD_PORT_ZONE -p tcp -m multiport --dports 80,443,452,454,8443,10443 -j ACCEPT
-A CELL_TEL_FWD_PORT_ZONE -p udp -m multiport --dports 5684 -j ACCEPT
-A CELL_TEL_FWD_PORT_ZONE -p udp -m multiport --dports 5683,5685 -j ACCEPT
-A CELL_TEL_FWD_PORT_ZONE -p icmp -m icmp --icmp-type 3 -j ACCEPT
-A CELL_TEL_FWD_PORT_ZONE -p icmp -m icmp --icmp-type 11 -j ACCEPT
-A CELL_TEL_FWD_PORT_ZONE -j ADDITION_ZONE
-A CELL_TEL_FWD_PORT_ZONE -m state --state RELATED,ESTABLISHED -j ACCEPT
-A CELL_TEL_FWD_PORT_ZONE -j UNAUTHORIZED_ZONE
-A CELL_TEL_IO_PORT_ZONE -p tcp -m multiport --dports 53,80,443,8883,10443,18883,19001:19009 -j ACCEPT
-A CELL_TEL_IO_PORT_ZONE -p udp -m multiport --dports 53,5684 -j ACCEPT
-A CELL_TEL_IO_PORT_ZONE -p udp -m multiport --dports 5683,5685 -j ACCEPT
-A CELL_TEL_IO_PORT_ZONE -p icmp -m icmp --icmp-type 3 -j ACCEPT
-A CELL_TEL_IO_PORT_ZONE -p icmp -m icmp --icmp-type 11 -j ACCEPT
-A CELL_TEL_IO_PORT_ZONE -j ADDITION_ZONE
-A CELL_TEL_IO_PORT_ZONE -m state --state RELATED,ESTABLISHED -j ACCEPT
-A CELL_TEL_IO_PORT_ZONE -j UNAUTHORIZED_ZONE
-A FWD_CELL_PUB_IFACE_ZONE -o eth_vlan_c -j CELL_PUB_FWD_PORT_ZONE
-A FWD_CELL_PUB_IFACE_ZONE -o ap0 -j CELL_PUB_FWD_PORT_ZONE
-A FWD_CELL_PUB_IFACE_ZONE -j UNAUTHORIZED_ZONE
-A FWD_CELL_TEL_IFACE_ZONE -o eth_vlan_b -j CELL_TEL_FWD_PORT_ZONE
-A FWD_CELL_TEL_IFACE_ZONE -j UNAUTHORIZED_ZONE
-A FWD_VLAN_B_IFACE_ZONE -o wlan0 -j VLAN_B_FWD_PORT_ZONE
-A FWD_VLAN_B_IFACE_ZONE -j UNAUTHORIZED_ZONE
-A FWD_VLAN_C_IFACE_ZONE -o ap0 -j VLAN_C_FWD_PORT_ZONE
-A FWD_VLAN_C_IFACE_ZONE -j UNAUTHORIZED_ZONE
-A FWD_WIFI_AP_IFACE_ZONE -o eth_vlan_c -j WIFI_AP_FWD_PORT_ZONE
-A FWD_WIFI_AP_IFACE_ZONE -j UNAUTHORIZED_ZONE
-A FWD_WIFI_STA_IFACE_ZONE -o eth_vlan_b -j WIFI_STA_FWD_PORT_ZONE
-A FWD_WIFI_STA_IFACE_ZONE -j UNAUTHORIZED_ZONE
-A INPUT_CELL_PUB_IP_ZONE -d 192.168.162.0/24 -j CELL_PUB_IO_PORT_ZONE
-A INPUT_CELL_PUB_IP_ZONE -d 192.168.173.0/24 -j CELL_PUB_IO_PORT_ZONE
-A INPUT_CELL_PUB_IP_ZONE -j UNAUTHORIZED_ZONE
-A INPUT_CELL_TEL_IP_ZONE -d 192.168.161.0/24 -j CELL_TEL_IO_PORT_ZONE
-A INPUT_CELL_TEL_IP_ZONE -j UNAUTHORIZED_ZONE
-A INPUT_ETH0_IP_ZONE -s 192.168.1.0/24 -j ACCEPT
-A INPUT_ETH0_IP_ZONE -d 172.17.0.0/16 -j ACCEPT
-A INPUT_VLAN_A_IP_ZONE -d 192.168.160.0/24 -j VLAN_A_IN_PORT_ZONE
-A INPUT_VLAN_A_IP_ZONE -d 192.168.170.0/24 -j VLAN_A_IN_PORT_ZONE
-A INPUT_VLAN_A_IP_ZONE -d 224.0.0.0/4 -j ACCEPT
-A INPUT_VLAN_A_IP_ZONE -j UNAUTHORIZED_ZONE
-A INPUT_VLAN_B_IP_ZONE -d 192.168.161.0/24 -j VLAN_B_IO_PORT_ZONE
-A INPUT_VLAN_B_IP_ZONE -d 192.168.171.0/24 -j VLAN_B_IO_PORT_ZONE
-A INPUT_VLAN_B_IP_ZONE -j UNAUTHORIZED_ZONE
-A INPUT_VLAN_C_IP_ZONE -d 192.168.162.0/24 -j VLAN_C_IO_PORT_ZONE
-A INPUT_VLAN_C_IP_ZONE -d 192.168.173.0/24 -j VLAN_C_IO_PORT_ZONE
-A INPUT_VLAN_C_IP_ZONE -j UNAUTHORIZED_ZONE
-A INPUT_WIFI_AP_IP_ZONE -s 0.0.0.0/32 -d 255.255.255.255/32 -p udp -m multiport --dports 67,68 -j ACCEPT
-A INPUT_WIFI_AP_IP_ZONE -d 192.168.162.0/24 -j WIFI_AP_IO_PORT_ZONE
-A INPUT_WIFI_AP_IP_ZONE -d 192.168.173.0/24 -j WIFI_AP_IO_PORT_ZONE
-A INPUT_WIFI_AP_IP_ZONE -j UNAUTHORIZED_ZONE
-A INPUT_WIFI_STA_IP_ZONE -d 192.168.161.0/24 -j WIFI_STA_IO_PORT_ZONE
-A INPUT_WIFI_STA_IP_ZONE -j UNAUTHORIZED_ZONE
-A OUTPUT_CELL_PUB_IP_ZONE -j CELL_PUB_IO_PORT_ZONE
-A OUTPUT_CELL_TEL_IP_ZONE -j CELL_TEL_IO_PORT_ZONE
-A OUTPUT_ETH0_IP_ZONE -j ACCEPT
-A OUTPUT_VLAN_A_IP_ZONE -d 224.0.0.0/4 -j ACCEPT
-A OUTPUT_VLAN_A_IP_ZONE -j VLAN_A_OUT_PORT_ZONE
-A OUTPUT_VLAN_B_IP_ZONE -j VLAN_B_IO_PORT_ZONE
-A OUTPUT_VLAN_C_IP_ZONE -j VLAN_C_IO_PORT_ZONE
-A OUTPUT_WIFI_AP_IP_ZONE -j WIFI_AP_IO_PORT_ZONE
-A OUTPUT_WIFI_STA_IP_ZONE -j WIFI_STA_IO_PORT_ZONE
-A RTBM_FLT_FWD -i eth0 -j FWD_ETH0_IFACE_ZONE
-A RTBM_FLT_FWD -i eth_vlan_a -j FWD_VLAN_A_IFACE_ZONE
-A RTBM_FLT_FWD -i eth_vlan_b -j FWD_VLAN_B_IFACE_ZONE
-A RTBM_FLT_FWD -i eth_vlan_c -j FWD_VLAN_C_IFACE_ZONE
-A RTBM_FLT_FWD -i wlan0 -j FWD_WIFI_STA_IFACE_ZONE
-A RTBM_FLT_FWD -i ap0 -j FWD_WIFI_AP_IFACE_ZONE
-A RTBM_FLT_INPUT -i eth0 -j INPUT_ETH0_IP_ZONE
-A RTBM_FLT_INPUT -i eth_vlan_a -j INPUT_VLAN_A_IP_ZONE
-A RTBM_FLT_INPUT -i eth_vlan_b -j INPUT_VLAN_B_IP_ZONE
-A RTBM_FLT_INPUT -i eth_vlan_c -j INPUT_VLAN_C_IP_ZONE
-A RTBM_FLT_INPUT -i wlan0 -j INPUT_WIFI_STA_IP_ZONE
-A RTBM_FLT_INPUT -i ap0 -j INPUT_WIFI_AP_IP_ZONE
-A RTBM_FLT_OUTPUT -o eth0 -j OUTPUT_ETH0_IP_ZONE
-A RTBM_FLT_OUTPUT -o eth_vlan_a -j OUTPUT_VLAN_A_IP_ZONE
-A RTBM_FLT_OUTPUT -o eth_vlan_b -j OUTPUT_VLAN_B_IP_ZONE
-A RTBM_FLT_OUTPUT -o eth_vlan_c -j OUTPUT_VLAN_C_IP_ZONE
-A RTBM_FLT_OUTPUT -o wlan0 -j OUTPUT_WIFI_STA_IP_ZONE
-A RTBM_FLT_OUTPUT -o ap0 -j OUTPUT_WIFI_AP_IP_ZONE
-A SWM_LOG_ZONE -j LOG --log-prefix "[_SWM_IPT_DROP]:" --log-level 2
-A UNAUTHORIZED_ZONE -m limit --limit 5/min -j LOG --log-prefix "[_SEC_IPTABLES_DROPPED]:" --log-level 2
-A UNAUTHORIZED_ZONE -j DROP
-A VLAN_A_IN_PORT_ZONE -p tcp -m tcp --dport 1840:1842 -j ACCEPT
-A VLAN_A_IN_PORT_ZONE -p tcp -m tcp --dport 1834:1835 -j ACCEPT
-A VLAN_A_IN_PORT_ZONE -p tcp -m tcp --dport 3490 -j ACCEPT
-A VLAN_A_IN_PORT_ZONE -p tcp -m multiport --dports 22,1800,1801,1805,1830,1850,1870,1890,1895,4010,4627 -j ACCEPT
-A VLAN_A_IN_PORT_ZONE -p udp -m multiport --dports 319,320,802,5000,5001,10322 -j ACCEPT
-A VLAN_A_IN_PORT_ZONE -p icmp -m icmp --icmp-type 3 -j ACCEPT
-A VLAN_A_IN_PORT_ZONE -p icmp -m icmp --icmp-type 11 -j ACCEPT
-A VLAN_A_IN_PORT_ZONE -j ADDITION_ZONE
-A VLAN_A_IN_PORT_ZONE -m state --state RELATED,ESTABLISHED -j ACCEPT
-A VLAN_A_IN_PORT_ZONE -j UNAUTHORIZED_ZONE
-A VLAN_A_OUT_PORT_ZONE -p tcp -m tcp --dport 1840:1842 -j ACCEPT
-A VLAN_A_OUT_PORT_ZONE -p tcp -m tcp --dport 1834:1835 -j ACCEPT
-A VLAN_A_OUT_PORT_ZONE -p tcp -m tcp --dport 3490 -j ACCEPT
-A VLAN_A_OUT_PORT_ZONE -p tcp -m multiport --dports 22,1800,1801,1805,1830,1850,1870,1890,1895,4010,4627 -j ACCEPT
-A VLAN_A_OUT_PORT_ZONE -p udp -m multiport --dports 319,320,802,5000,5001,10322 -j ACCEPT
-A VLAN_A_OUT_PORT_ZONE -p icmp -m icmp --icmp-type 3 -j ACCEPT
-A VLAN_A_OUT_PORT_ZONE -p icmp -m icmp --icmp-type 11 -j ACCEPT
-A VLAN_A_OUT_PORT_ZONE -j ADDITION_ZONE
-A VLAN_A_OUT_PORT_ZONE -m state --state RELATED,ESTABLISHED -j ACCEPT
-A VLAN_A_OUT_PORT_ZONE -j UNAUTHORIZED_ZONE
-A VLAN_B_FWD_PORT_ZONE -p tcp -m multiport --dports 80,443,452,454,8443,10443 -j ACCEPT
-A VLAN_B_FWD_PORT_ZONE -p udp -m multiport --dports 5684 -j ACCEPT
-A VLAN_B_FWD_PORT_ZONE -p icmp -m icmp --icmp-type 3 -j ACCEPT
-A VLAN_B_FWD_PORT_ZONE -p icmp -m icmp --icmp-type 11 -j ACCEPT
-A VLAN_B_FWD_PORT_ZONE -j ADDITION_ZONE
-A VLAN_B_FWD_PORT_ZONE -m state --state RELATED,ESTABLISHED -j ACCEPT
-A VLAN_B_FWD_PORT_ZONE -j UNAUTHORIZED_ZONE
-A VLAN_B_IO_PORT_ZONE -p tcp -m multiport --dports 53,1883 -j ACCEPT
-A VLAN_B_IO_PORT_ZONE -p udp -m multiport --dports 53 -j ACCEPT
-A VLAN_B_IO_PORT_ZONE -p icmp -m icmp --icmp-type 3 -j ACCEPT
-A VLAN_B_IO_PORT_ZONE -p icmp -m icmp --icmp-type 11 -j ACCEPT
-A VLAN_B_IO_PORT_ZONE -j ADDITION_ZONE
-A VLAN_B_IO_PORT_ZONE -m state --state RELATED,ESTABLISHED -j ACCEPT
-A VLAN_B_IO_PORT_ZONE -j UNAUTHORIZED_ZONE
-A VLAN_C_FWD_PORT_ZONE -p icmp -m icmp --icmp-type 3 -j ACCEPT
-A VLAN_C_FWD_PORT_ZONE -p icmp -m icmp --icmp-type 11 -j ACCEPT
-A VLAN_C_FWD_PORT_ZONE -p tcp -j ACCEPT
-A VLAN_C_FWD_PORT_ZONE -p udp -j ACCEPT
-A VLAN_C_FWD_PORT_ZONE -j ADDITION_ZONE
-A VLAN_C_FWD_PORT_ZONE -j UNAUTHORIZED_ZONE
-A VLAN_C_IO_PORT_ZONE -p tcp -m multiport --dports 53 -j ACCEPT
-A VLAN_C_IO_PORT_ZONE -p udp -m multiport --dports 53 -j ACCEPT
-A VLAN_C_IO_PORT_ZONE -p icmp -m icmp --icmp-type 3 -j ACCEPT
-A VLAN_C_IO_PORT_ZONE -p icmp -m icmp --icmp-type 11 -j ACCEPT
-A VLAN_C_IO_PORT_ZONE -j ADDITION_ZONE
-A VLAN_C_IO_PORT_ZONE -m state --state RELATED,ESTABLISHED -j ACCEPT
-A VLAN_C_IO_PORT_ZONE -j UNAUTHORIZED_ZONE
-A WIFI_AP_FWD_PORT_ZONE -p tcp -m multiport --dports 22,53,80,443,8080,8883,18883,110,143,25,465,587,995,993 -j ACCEPT
-A WIFI_AP_FWD_PORT_ZONE -p udp -m multiport --dports 53 -j ACCEPT
-A WIFI_AP_FWD_PORT_ZONE -p icmp -j ACCEPT
-A WIFI_AP_FWD_PORT_ZONE -j ADDITION_ZONE
-A WIFI_AP_FWD_PORT_ZONE -m state --state RELATED,ESTABLISHED -j ACCEPT
-A WIFI_AP_FWD_PORT_ZONE -j UNAUTHORIZED_ZONE
-A WIFI_AP_IO_PORT_ZONE -p tcp -m tcp --dport 53 -j ACCEPT
-A WIFI_AP_IO_PORT_ZONE -p udp -m udp --dport 53 -j ACCEPT
-A WIFI_AP_IO_PORT_ZONE -j ADDITION_ZONE
-A WIFI_AP_IO_PORT_ZONE -m state --state RELATED,ESTABLISHED -j ACCEPT
-A WIFI_AP_IO_PORT_ZONE -j UNAUTHORIZED_ZONE
-A WIFI_STA_FWD_PORT_ZONE -p tcp -m multiport --dports 80,443,452,454,8443,10443 -j ACCEPT
-A WIFI_STA_FWD_PORT_ZONE -p udp -m multiport --dports 5684 -j ACCEPT
-A WIFI_STA_FWD_PORT_ZONE -p udp -m multiport --dports 5683,5685 -j ACCEPT
-A WIFI_STA_FWD_PORT_ZONE -p icmp -m icmp --icmp-type 3 -j ACCEPT
-A WIFI_STA_FWD_PORT_ZONE -p icmp -m icmp --icmp-type 11 -j ACCEPT
-A WIFI_STA_FWD_PORT_ZONE -j ADDITION_ZONE
-A WIFI_STA_FWD_PORT_ZONE -m state --state RELATED,ESTABLISHED -j ACCEPT
-A WIFI_STA_FWD_PORT_ZONE -j UNAUTHORIZED_ZONE
-A WIFI_STA_IO_PORT_ZONE -p tcp -m tcp --dport 3490 -j ACCEPT
-A WIFI_STA_IO_PORT_ZONE -p tcp -m multiport --dports 53,80,443,8883,10443,18443,18883 -j ACCEPT
-A WIFI_STA_IO_PORT_ZONE -p udp -m multiport --dports 53,5684 -j ACCEPT
-A WIFI_STA_IO_PORT_ZONE -p udp -m multiport --dports 5683,5685 -j ACCEPT
-A WIFI_STA_IO_PORT_ZONE -p icmp -m icmp --icmp-type 3 -j ACCEPT
-A WIFI_STA_IO_PORT_ZONE -p icmp -m icmp --icmp-type 11 -j ACCEPT
-A WIFI_STA_IO_PORT_ZONE -j ADDITION_ZONE
-A WIFI_STA_IO_PORT_ZONE -m state --state RELATED,ESTABLISHED -j ACCEPT
-A WIFI_STA_IO_PORT_ZONE -j UNAUTHORIZED_ZONE
-A fw_dozable -j DROP
COMMIT
# Completed on Tue Nov 21 00:50:41 2023
