iptables/rtbm/iptables_save_nat.txt
# Generated by iptables-save v1.6.2 on Tue Nov 21 00:51:06 2023
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [116:6962]
:POSTROUTING ACCEPT [116:6962]
-A PREROUTING -i eth_vlan_a -p tcp -m tcp --dport 800 -j REDIRECT --to-ports 1800
-A PREROUTING -i eth_vlan_a -p tcp -m tcp --dport 801 -j REDIRECT --to-ports 1801
-A PREROUTING -i eth_vlan_a -p tcp -m tcp --dport 805 -j REDIRECT --to-ports 1805
-A PREROUTING -i eth_vlan_a -p tcp -m tcp --dport 830 -j REDIRECT --to-ports 1830
-A PREROUTING -i eth_vlan_a -p tcp -m tcp --dport 834 -j REDIRECT --to-ports 1834
-A PREROUTING -i eth_vlan_a -p tcp -m tcp --dport 835 -j REDIRECT --to-ports 1835
-A PREROUTING -i eth_vlan_a -p tcp -m tcp --dport 840 -j REDIRECT --to-ports 1840
-A PREROUTING -i eth_vlan_a -p tcp -m tcp --dport 841 -j REDIRECT --to-ports 1841
-A PREROUTING -i eth_vlan_a -p tcp -m tcp --dport 842 -j REDIRECT --to-ports 1842
-A PREROUTING -i eth_vlan_a -p tcp -m tcp --dport 850 -j REDIRECT --to-ports 1850
-A PREROUTING -i eth_vlan_a -p tcp -m tcp --dport 870 -j REDIRECT --to-ports 1870
-A PREROUTING -i eth_vlan_a -p tcp -m tcp --dport 890 -j REDIRECT --to-ports 1890
-A PREROUTING -i eth_vlan_a -p tcp -m tcp --dport 895 -j REDIRECT --to-ports 1895
-A PREROUTING -i eth_vlan_a -p tcp -m tcp --dport 4626 -j DNAT --to-destination 192.168.170.5:4626
-A PREROUTING -i eth_vlan_a -p tcp -m tcp --dport 4627 -j DNAT --to-destination 192.168.170.5:4627
-A POSTROUTING -s 192.168.160.0/24 -o lxcbr0 -j MASQUERADE
-A POSTROUTING -s 192.168.170.0/24 ! -d 192.168.170.0/24 -j MASQUERADE
COMMIT
# Completed on Tue Nov 21 00:51:06 2023
